# puregym-attendance

./: LICENSE  README.md  puregym.py  pyproject.toml  requirements.txt
