[tool.poetry]
name = "puregym-attendance"
version = "0.1.0"
description = "A python client to query the PureGym mobile API for live gym attendance"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
textdistance = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
